--- a/flutter_bootcamp/pubspec.yaml
+++ b/flutter_bootcamp/pubspec.yaml
@@ -61,7 +61,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/pizza_resim.png
+    - assets/images/pizza_resim.png #session 5. image
+    - assets/images/aloe-vera.png #homework 3. image
+    - assets/images/image1.png #session 7.2 image
+    - assets/images/image2.png #session 7.2 image
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -76,7 +79,7 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Pacifico
+    - family: Pacifico #session 5. font
       fonts:
         - asset: assets/fonts/Pacifico-Regular.ttf
 
