--- a/flutter_bootcamp/pubspec.yaml
+++ b/flutter_bootcamp/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   shared_preferences:  #Session 12.2 
   path: ^1.8.0 #session 13.1
   sqflite: ^2.0.0 #session 13.1
+  http: ^0.13.4 #session 14.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
