Bootcamp Project Initial
Bloc pattern initial.

--- a/bootcamp_project/pubspec.yaml
+++ b/bootcamp_project/pubspec.yaml
@@ -31,6 +31,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.0.1 
+  path: ^1.8.0 
+  #http request
+  dio: ^4.0.4 
+
+  #firebase
+  #mising - authentication
+  firebase_core: ^1.12.0 
+  firebase_database: ^9.0.6 
 
 
   # The following adds the Cupertino Icons font to your application.
