--- a/bootcamp_project/pubspec.yaml
+++ b/bootcamp_project/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   path: ^1.8.0 
   #http request
   dio: ^4.0.4 
+  lottie: ^2.2.0 #animated icon 
+
 
   #firebase
   #mising - authentication
@@ -69,8 +71,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
