--- a/bootcamp_project/pubspec.yaml
+++ b/bootcamp_project/pubspec.yaml
@@ -36,12 +36,11 @@ dependencies:
   #http request
   dio: ^4.0.4 
   lottie: ^2.2.0 #animated icon 
-
-
+  flutter_lorem: ^2.0.0
   #firebase
   #mising - authentication
-  firebase_core: ^1.12.0 
-  firebase_database: ^9.0.6 
+  # firebase_core: ^1.12.0 
+  # firebase_database: ^9.0.6 
 
 
   # The following adds the Cupertino Icons font to your application.
